# yap

./: #.gitignore#  #GitSHA1.c.in#  .configure-custom.sh  .ctags  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  COPYING  CPackConfig.cmake  DisabledFeatures.txt  EnabledFeatures.txt  FindPackageLog.txt  GIT  GitSHA1.c  GitSHA1.c.in  ID  INSTALL  INSTALL.md  INSTALL.md.in  Makefile.am  Makefile.in  Packages.cmake  Prelims.cmake  README  README.EAM.html  README.TXT  README.md  README.nt  TAGS  TAGS.REMOVED.git-id  TO_DO  Threads.cmake  Untitled  YAP.cbp  YAP.files  YAP.includes  YapIOConfig.h  YapTermConfig.h.cmake  YapTermConfig.h.in  (+68 more)
CXX/: *compilation*  CMakeLists.txt  CXXSources.cmake  Doxyfile.cmake  cxx4yap.hh  fli_c_xx.md  heap.cxx  queue.cxx  yapa.hh  yapdb.cpp  yapdb.hh  yapi.cpp  yapi.hh  yapie.hh  yapq.hh  yapt.hh
CXX/_yap/: __init__.c  dtypes.c  dtypes.pxd  dtypes.pyx  stlcontainers.c  stlcontainers.pxd  stlcontainers.pyx  xdress_extra_types.c  xdress_extra_types.h
H/:  *Minibuf-6*  ATOMS  Atoms.h  CMakeLists.txt  Foreign.h  GLOBALS  HEAPFIELDS  Heap.h  LOCALS  Regs.h  ScannerTypes.h  Tags_24bits.h  Tags_32LowTag.h  Tags_32Ops.h  Tags_32bits.h  Tags_64bits.h  TermExt.h  Yap.h  YapAppliedOpcodes.h  YapArenas.h  YapBlobs.h  YapCompile.h  YapCompoundTerm.h  YapEval.h  YapFlags.h  YapGFlagInfo.h  YapHandles.h  YapHeap.h  YapLFlagInfo.h  YapMirror.h  YapOpcodes.h  YapSignals.h  YapTags.h  YapTerm.h  YapText.h  Yapproto.h  Yatom.h  absmi-interpretrer.h  absmi-switch.h  absmi-threaded.h  (+72 more)
H/heap/: #hstruct.h#  dglobals.h  dhstruct.h  dlocals.h  h0struct.h  hglobals.h  hlocals.h  hstruct.h  i0globals.h  ihstruct.h  ilocals.h  rglobals.h  rhstruct.h
JIT/: CMakeLists.txt  JIT_Compiler.cpp  JIT_Init.cpp  JIT_interface.cpp  a.sh  absmi_insts.h  absmi_insts.i  configure.in  jit_analysispreds.c  jit_codegenpreds.c  jit_configpreds.c  jit_debugpreds.c  jit_statisticpreds.c  jit_traced.c  jit_transformpreds.c
JIT/HPP/: #PassPrinters.hpp#  EnvironmentInit.h  IsGround.h  JIT.hpp  JIT_Compiler.hh  JIT_Compiler.hpp  PassPrinters.h  PassPrinters.hh  PassPrinters.hpp  Yap_AppliedBasicBlocks.h  Yap_BasicBlocks.h  debug_printers.h  fprintblock.h  indexing_ext.h  indexing_ext_d.h  indexing_std.h  indexing_std_d.h  jit_predicates.hh  jit_predicates.hpp  lastop.h  native_header.h  native_header_d.h  nextof.hh  nextof.hpp  p_dif.i  p_eq.i  p_functor.i  print_op.hh  print_preg.h  printblock.h  processa.cpp  singlecode_basics.h  singlecode_call.h  singlecode_cpred.h  singlecode_cut.h  singlecode_get.h  singlecode_misc.h  singlecode_pop.h  singlecode_primitive_predicates.h  singlecode_put.h  (+34 more)
JIT/examples/: append.pl  binary_trees.pl  fannkuch.pl  fasta.pl  hanoi.pl  k_nucleotide.pl  mandelbrot.pl  n-body.pl  nreverse.pl  nsieve.pl  nsieve_bits.pl  partial_sum.pl  pidigits.pl  query.pl  recursive.pl  spectral_norm.pl  tak.pl  zebra.pl
OPTYap/: CMakeLists.txt  Terminal Saved Output.REMOVED.git-id  alpha_locks.h  alpha_locks_funcs.h  locks_alpha_funcs.h  locks_mips.h  locks_mips_funcs.h  locks_pthread.h  locks_sparc.h  locks_x86.h  mips_locks.h  mips_locks_funcs.h  opt.config.h  opt.init.c  opt.macros.h  opt.mavar.h  opt.memory.c  opt.misc.c  opt.preds.c  opt.proto.h  opt.structs.h  or.copy_engine.c  or.cow_engine.c  or.cowengine.c  or.cut.c  or.engine.c  or.insts.h  or.insts.i  or.macros.h  or.memory.c  or.sba_amiops.h  or.sba_engine.c  or.sba_unify.h  or.sbaengine.c  or.scheduler.c  or.structs.h  or.thread_engine.c  or.threadengine.c  pthread_locks.h  sbaamiops.h  (+20 more)
console/terminal/: CMakeLists.txt  console.cpp  console.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_console.cpp  moc_mainwindow.cpp  moc_settingsdialog.cpp  qrc_terminal.cpp  settingsdialog.cpp  settingsdialog.ui  terminal.pro  ui_mainwindow.h  ui_settingsdialog.h
docs/:  *Minibuf-16*  CMakeLists.txt  Doxyfile  Doxyfile.cmake  Doxyfile.in  DoxygenLayout.xml  ERRS  Makefile  abn_tree.css  abn_tree_directive.coffee  angular.treeview.css  angular.treeview.js  application.js  bootstrap-treenav.js  builtins.tex  checkpl.yap  chr.md  chr.tex  clpqr.md  clpr.tex  core.md  customdoxygen.css  dir  docutils.yap  download.md  dox.md  dox2md.yap  doxfull.rc  doxsmall.rc  doxtest.rc  doxy-boot.js  doxygen.rc  doxygen_entrydb_80995.tmp.REMOVED.git-id  doxygens.rc  extensions.md  filter.c  filter.yap  fix.yap  fix_md  fli.md  (+33 more)
docs/assets/: DoxygenLayout.xml
docs/conv/: texi2doxy
docs/custom/: DoxygenLayout.xml  customdoxygen.css  doxy-boot.js  footer.html  header.html  jquery-3.2.1.min.js
docs/extra/: AttributedVariables.h  YapDocs.h  builtins.h  builtins.md  extensions.yap  io.h  io.md  library.h  library.yap  load_files.yap  main.h  modules.h  programming.h  programming.yap  syntax.h
docs/images/: yap.hqx
docs/index/: .cvsignore  Makefile  article.tex  iclp07.tex  latexmk  lp.bib
docs/md/: #run.md#  AttributedVariables.md  Builtins.md  CALLING_YAP.md  INSTALL.md  INSTALL.md.in  InputOutput.md  Modules.md  README.md  Syntax.md  YAPAPI.md  YAPLibrary.md  YAPPackages.md  YAPProgramming.md  (+32 more)
os/: CMakeLists.txt  SWI-Stream.h  YapIOConfig.h  YapIOConfig.h.cmake  absf.c  alias.c  assets.c  build.ninja  charsio.c  chartypes.c  chartypes.yap  console.c  edio.yap  encoding.h  files.c  fmem.c  fmemopen-android.c  fmemopen.c  fmemopen.h  format.c  format.h  getw.h  iopreds.c  iopreds.h  mem.c  meson.build  open_memstream.c  os.yap  pipes.c  pl-codelist.c  pl-ctype.c  pl-error.c  pl-error.h  pl-file.c  pl-file.h  pl-files.c  pl-fmt.c  pl-glob.c  pl-locale.c  pl-nt.c  (+41 more)
pl/:  *Minibuf-3*  CMakeLists.txt  a  absf.md  absf.yap  android.yap  arith.yap  arithpreds.yap  arrays.yap  atoms.yap  attributes.md  attributes.yap  boot.yap  boot2.yap  bootlists.yap  bootutils.yap  builtins.yap  callcount.yap  checker.yap  chtypes.yap  consult.yap  control.yap  corout.yap  dbload.yap  debug.yap  depth_bound.yap  dialect.yap  directives.yap  eam.yap  error.yap  errors.yap  eval.yap  flags.yap  grammar.yap  ground.yap  hacks.yap  history.pl  if.yap  imports.yap  init.yap  (+43 more)
utf8proc/: CMakeLists.txt  Doxyfile  utf8proc.c  utf8proc.h  utils.cmake
(+2558 files in other folders)
